# materials-transformer

./: .gitignore  Dockerfile  README.md  full_error_log.txt  pipeline.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/conf/data/: fields.yaml  materials.yaml  modes.yaml
conf/conf/model/: mode-mlp.yaml  transformer.yaml
conf/conf/sweeper/: optuna.yaml
conf/conf/trainer/: default.yaml
conf/data/: default.yaml  fields.yaml  ir-data.yaml  irstruct.yaml  materials.yaml
conf/model/: d2f.yaml  f2f.yaml  irstructformer.yaml  materials-model.yaml  materials.yaml  transformer.yaml
conf/scheduler/: cosine_annealing.yaml  reduce_on_plateau.yaml
conf/sweeper/: optuna.yaml
conf/trainer/: default.yaml
kube/manifests/: code-pvc.yaml  deployment-dev.yaml
notebooks/: loss_sanity.ipynb  metric.ipynb
src/materials_transformer/: main.py
src/materials_transformer/data_modules/: datamodule.py  fields.py  materials.py
src/materials_transformer/models/: transformer.py
src/materials_transformer/utils/: eval.py  fourier.py
src/matformer/: main.py
src/matformer/data_modules/: fields_dm.py  ir_dm.py  materials.py  smiles_dm.py
src/matformer/matformer/: main.py
src/matformer/matformer/data_modules/: fields_dm.py  ir_dm.py
src/matformer/matformer/models/: mode_mlp.py
src/matformer/matformer/utils/: callbacks.py  eval.py
src/matformer/models/: d2f_transformer.py  f2f_transformer.py  irgraphformer.py  irstructformer.py  mode_mlp.py  smiles_transformer.py  transformer.py
src/matformer/utils/: callbacks.py  custom_loss.py  eval.py  fourier.py  mapping.py  smiles_analysis.py
