[project]
name = "materials-transformer"
version = "0.1.0"
description = ""
authors = [
    {name = "hexa",email = "ethanmick741@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchmetrics (>=1.7.2,<2.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]

[tool.poetry]
packages = [{include = "materials_transformer", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pyrootutils = "^1.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length
line-length = 88
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable the 'pyflakes' and 'pycodestyle' rule sets for error checking and style.
# 'I' is for isort (import sorting).
select = ["E", "F", "I"]

[tool.ruff.format]
# Use single quotes for strings where possible.
quote-style = "single"
